tests/parsing/smtlib/poly/errors/021_let_bad_body_2.expected
File "tests/parsing/smtlib/poly/errors/021_let_bad_body_2.psmt2", line 2, character 22-24:
2 | (assert (let ((x 42)) as))
                          ^^
Error while parsing a term, read the reserved word 'as',
      but expected a term (body for the let binding).
